--- a/git.html
+++ b/git.html
@@ -1,11 +1,670 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <h2>Physical Text Formatting</h2>
+    <p><b>This is bold text</b></p>
+    <p><i>This is italic text</i></p>
+    <p><u>This next is underline</u></p>
+    <p><a href="">Click to go another page</a></p>
+    <p><del>This is deleted text</del></p>
+    <p><small>This is small text</small></p>
+    <p><mark>This is marked text</mark></p>
+    <p>H<sub>2</sub>O is the chemical symbol for water</p>
+    <p>5<sup>2</sub>Is equal 25</p>
+    <p>Fractions can be made with a mix of sup and sub:1<sub>2</sub></p>
+
+
+
+
+
+    <table border="1" width="40%">
+        <thead>
+            <tr>
+                <th>N</th>
+                <th>Ad</th>
+                <th>Soyad</th>
+                <th>Ata adi</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+
+                <td>2</td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            <tr>
+                <td>3</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+
+    <br>
+    <table border="1" width="40%">
+        <thead>
+            <tr>
+                <th rowspan="2">N</th>
+                <th colspan="3">Isciler</th>
+            <tr>
+                <th>Ad</th>
+                <th>Soyad</th>
+                <th>Ata adi</th>
+            </tr>
+            <tr>
+                <thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+
+                    </tr>
+                </tbody>
+    </table>
+    <br>
+    <table border="1" width="40%">
+        <thead>
+            <tr>
+                <th>No.</th>
+                <th>Full name</th>
+                <th>Position</th>
+                <th>Salary</th>
+            <tr>
+
+                <td>1</td>
+                <td>Tom Jackson</td>
+                <td>Hr Manager</td>
+                <td>$2500</td>
+            <tr>
+
+                <td>2</td>
+                <td>Kate White</td>
+                <td>Sales Manager</td>
+                <td>$2600</td>
+            <tr>
+                <td>3</td>
+                <td>Rose Watson</td>
+                <td>E-Commerce Manager</td>
+                <td>$3000</td>
+            <tr>
+                <td>4</td>
+                <td>Bruce Walker</td>
+                <td>CRM Manager</td>
+                <td>$2900</td>
+                <thead>
+                    <tr>
+                        <th colspan="3">Total expense:</th>
+                        <th>$11100</th>
+                    </tr>
+                </thead>
+    </table>
+    <br>
+    <table border="1" width="40%">
+        <thead>
+            <tr>
+                <th colspan="2"> Language and framework</th>
+            </tr>
+            <td>Python</td>
+            <td>Django</td>
+            <tr>
+                <td rowspan="3"> Javascript</td>
+                <td>React.js</td>
+            <tr>
+                <td>Vue.js</td>
+            <tr></tr>
+            <td>Ruby</td>
+            <td>Ruby on Rails</td>
+            </tr>
+        </thead>
+    </table>
+    <br>
+    <table border="1" width="40%">
+        <thead>
+            <tr>
+                <th rowspan="2">Station</th>
+                <th colspan="2">Tempurature</th>
+                <th rowspan="2">Humidity</th>
+                <th rowspan="2">Weather</th>
+            </tr>
+            <tr>
+                <th>Max</th>
+                <th>Min</th>
+            </tr>
+            <td>USA</td>
+            <td>24</td>
+            <td>19</td>
+            <td>60%</td>
+            <td>cloudly</td>
+            <tr>
+                <td>Germany</td>
+                <td>5</td>
+                <td>-1</td>
+                <td>70%</td>
+                <td>rainy</td>
+            </tr>
+        </thead>
+    </table>
+    <br>
+    <table border="1" width="80%">
+        <thead>
+            <tr>
+                <th colspan="11">Athletics day time table</th>
+            <tr>
+                <th rowspan="1">Area</th>
+                <th rowspan="1">10am-11am</th>
+                <th rowspan="1">11am-12pm</th>
+                <th rowspan="1">12-1pm</th>
+                <th rowspan="1">1pm-2pm</th>
+                <th rowspan="1">2pm-3pm</th>
+        </thead>
+        <tr>
+            <td rowspan="2">Track</td>
+            <td>400m</td>
+            <td>200m</td>
+            <td rowspan="3">Lunch</td>
+            <td>800m</td>
+            <td>100m</td>
+        <tr>
+            <td>Hurdles</td>
+            <td>1500</td>
+            <td>Free</td>
+            <td>80m</td>
+        </tr>
+        <td>Field</td>
+        <td>Discus</td>
+        <td>Javelin</td>
+        <td>Shotup</td>
+        <td>Hummer throw</td>
+        </tr>
+    </table>
+    <br>
+    <table border="1" width="100">
+        <tr>
+            <th></th>
+            <th></th>
+            <th colspan="3">Morning</th>
+            <th>Lunch</th>
+            <th colspan="4">Afternoon</th>
+            <th colspan="3">evening</th>
+        </tr>
+        <tr>
+            <th></th>
+            <th></th>
+            <td rowspan="1">9-10am</td>
+            <td rowspan="1">10-11am</td>
+            <td rowspan="1">11-12pm</td>
+            <td rowspan="1">1-2pm</td>
+            <td rowspan="1">2-3pm</td>
+            <td rowspan="1">4-5pm</td>
+            <td colspan="1">5-6pm</td>
+            <td rowspan="1">6-7pm</td>
+            <td rowspan="1">7-8pm</td>
+            <td rowspan="1">8-9pm</td>
+        </tr>
+        <tr>
+            <td rowspan="2">Work</td>
+            <td>Monday</td>
+            <td colspan="3">Development meeting</td>
+            <td></td>
+            <td colspan="3"> Client meeting</td>
+            <td>Commute</td>
+            <td colspan="3"> Free</td>
+        <tr>
+            <td>Tuesday</td>
+            <td colspan="3">In Office</td>
+            <td></td>
+            <td colspan="6">In office</td>
+        <tr>
+            <td rowspan="2">Lecture</td>
+            <td>Wednesday</td>
+            <td colspan="3">CSC205</td>
+            <td></td>
+            <td colspan="6">preparation</td>
+        <tr>
+            <td>Thursday</td>
+            <td colspan="3">MAM200</td>
+            <td></td>
+            <td colspan="3">Tutorials for MAM200</td>
+            <td colspan="5"> free</td>
+        <tr>
+            <td rowspan="2">Research</td>
+            <td>Friday</td>
+            <td colspan="3">Research</td>
+            <td></td>
+            <td colspan="6">Researh</td>
+        </tr>
+
+        <tr>
+            <table border="1" width="90%">
+                <thead>
+                    <br>
+                <tbody>
+
+                    <tr>
+                        <th rowspan="2">№</th>
+                        <th colspan="4">Imtahan</th>
+                        <th colspan="4">Muellim</th>
+                    </tr>
+                    <tr>
+                        <th>Ad</th>
+                        <th>Soyad</th>
+                        <th>Qrup</th>
+                        <th>Ad</th>
+                        <th>Soyad</th>
+                        <th>Elmi derece</th>
+                        <th>Ad</th>
+                        <th>Kredit</th>
+                    </tr>
+                    <tr>
+                        <th rowspan="1">1</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        </th>
+                    <tr>
+                        <th rowspan="1">2</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    <tr>
+                        <th rowspan="1">3</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    <tr>
+                        <th rowspan="1">4</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    <tr>
+                        <th rowspan="1">5</th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+        </tr>
+        </tr>
+    </table>
+    <br>
+    <br>
+    <table border="1" width="90%">
+        <thead>
+
+            <tr>
+                <th rowspan="4">№</th>
+                <th colspan="10">A</th>
+            </tr>
+            <tr>
+                <th colspan="5">B</th>
+                <th rowspan="3" colspan="2">G</th>
+                <th colspan="4">K</th>
+            </tr>
+
+            <tr>
+                <th rowspan="2">C</th>
+                <th rowspan="2">D</th>
+                <th colspan="2">E</th>
+                <th rowspan="2">F</th>
+                <th colspan="2">H</th>
+                <th rowspan="2">J</th>
+            </tr>
+
+            <tr>
+                <th>L</th>
+                <th>S</th>
+                <th>N</th>
+                <th>M</th>
+            </tr>
+
+            <tr>
+                <th>1</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+            </tr>
+            <tr>
+                <th>2</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+            </tr>
+            <tr>
+                <th>3</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+            </tr>
+            <tr>
+                <th>4</th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+    </table>
+    <br>
+    <br>
+    <br>
+    <table border="1" width="90%">
+        <thead>
+            <tr>
+                <th colspan="6">Time Table</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th rowspan="6">Hours</th>
+                <th>Mon</th>
+                <th>Tue</th>
+                <th>Wed</th>
+                <th>Thu</th>
+                <th>Fri</th>
+            </tr>
+            <tr>
+                <td> Science</td>
+                <td>Maths</td>
+                <td>Science</td>
+                <td>Maths</td>
+                <td>Arts</td>
+            </tr>
+            <tr>
+                <td>Social</td>
+                <td>History</td>
+                <td>English</td>
+                <td>Social</td>
+                <td>Sports</td>
+            </tr>
+            <tr>
+                <th colspan="5">Lunch</th>
+            </tr>
+            <tr>
+                <td>Science</td>
+                <td>Maths</td>
+                <td>Science</td>
+                <td>Maths</td>
+                <th rowspan="2">Project</th>
+            </tr>
+            <tr>
+                <td>Social</td>
+                <td>History</td>
+                <td>English</td>
+                <td>Social</td>
+            </tr>
+        </tbody>
+    </table>
+    <br>
+    <br>
+    <br>
+    <ol>List of Indian States with ther capital</ol>
+
+    <ol>
+        <li> Dehli
+            <ul>
+                <li>New Dehli</li>
+            </ul>
+        </li>
+        <li>Haryana
+            <ul>
+                <li>Chandigarh</li>
+            </ul>
+        </li>
+        <li>Gujarat
+            <ul>
+                <li>Gandhinagar</li>
+            </ul>
+        </li>
+        <li>Rajasthan
+            <ul>
+                <li>Jaipur</li>
+            </ul>
+        </li>
+        <li>Maharashtra
+            <ul>
+                <li>Mumbai</li>
+            </ul>
+        </li>
+        <li>Uttarpradesh
+            <ul>
+                <li>Lucknow</li>
+            </ul>
+        </li>
+    </ol>
+    <br>
+    <br>
+    <br>
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Javascript</li>
+        <ul>
+            <li>VueJS</li>
+        </ul>
+        <ul>
+            <li>ReactJS</li>
+        </ul>
+        <ul>
+            <li>AngularJS</li>
+        </ul>
+        <li>Git</li>
+    </ol>
+    <br>
+    <br>
+    <br>
+    <ol>
+        <li>Fruist:</li>
+        <ol>
+            <li>Mango</li>
+            <li>Orange</li>
+        </ol>
+        <li>Vegetables:</li>
+
+        <ol>
+            <li>Cabbage</li>
+            <li>Capsicum</li>
+
+            <ol>
+                <li>Greean Capsicum</li>
+                <li>Yellow Capsicum</li>
+                <li>Red Capsicum</li>
+            </ol>
+            <br>
+            <br>
+            <ul>
+                <li type="disc">ADNSU
+                    <ul>
+                        <li type="circle">ITIF
+                            <ul>
+                                <li>Komputer muhendisliyi</li>
+                                <li>Elektronika</li>
+                            </ul>
+                        </li>
+                        <li type="circle">KTF</li>
+                        <li type="circle">QNMF</li>
+                    </ul>
+                </li>
+                <li type="disc">BMU
+                    <ul>
+                        <li type="circle">A</li>
+                        <li type="circle">B</li>
+                    </ul>
+                </li>
+                <li tyape="disc">UNEC
+                    <ul>
+                        <li type="circle"> C
+                            <ul>
+                                <li>E</li>
+                                <li>F</li>
+                            </ul>
+
+                        </li>
+                        <li type="circle">D</li>
+                    </ul>
+                </li>
+            </ul>
+            <br>
+            <ol type="I">
+                <li>Background skillis</li>
+                <ol>
+                    <li>Unix Commands</li>
+                    <li>Vim Test editors</li>
+                </ol>
+
+                <li>HTML</li>
+                <ol>
+                    <li>minimal page</li>
+                    <li>Headings</li>
+                    <li>Elements</li>
+                    <li>list
+                        <ol type="a">
+                            <li>Unordered</li>
+                            <li>Ordered</li>
+                            <li>Nested</li>
+                        </ol>
+                    </li>
+                    <li>Links 
+                        <ol type="a">
+                            <li>Absolute</li>
+                            <li>Relative</li>
+                        </ol>
+                    </li>
+                    <li>Images</li>
+                </ol>
+
+
+                <li>CSS
+                    <ol>
+                        <li>Basic Selectors
+                            <ol type="a">
+                                <li>Element</li>
+                                <li>Class</li>
+                                <li>ID</li>
+                                <li>Group</li>
+
+                            </ol>
+                        </li>
+                        <li>Box Model</li>
+                        <li>The DOM</li>
+                    </ol>
+                </li>
+
+
+                <li>Programming
+                    <ol>
+                        <li>Python</li>
+                        <li>Javascript</li>
+                    </ol>
+                </li>
+
+                <li>Database
+                    <ol>
+                        <li>Flat FIle</li>
+                        <li>Relative</li>
+                    </ol>
+                </li>
+            </ol>
+            <br>
+
+
 </body>
+
 </html>
